# EchoText

./: .gitignore  README.en.md  README.md  buildozer.spec  main.py  pyproject.toml
android-app/: settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/org/echotext/echotext/: EchoTextApplication.java  MainActivity.java
android-app/app/src/main/java/org/echotext/echotext/core/: DiscoveryService.java  EchoTextController.java  FailureStatusMapper.java  HistoryStore.java  JsonUtils.java  LanNetwork.java  PairCodeManager.java  SecurityUtils.java  SettingsStore.java  TransportClient.java  TransportFailure.java  TransportServer.java
android-app/app/src/main/java/org/echotext/echotext/model/: DeviceIdentity.java  HistoryEntry.java  Peer.java  (+1 more)
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/values-zh-rCN/: strings.xml
packaging/: echotext.iss  echotext_pyinstaller.spec
scripts/: build_all.ps1  build_android_native.ps1  build_android_wsl.ps1  build_windows.ps1  generate_brand_assets.py  package_source.ps1  repair_toolchain.ps1  test.ps1
src/echotext/: __init__.py  app.py  assets.py  crypto.py  desktop_env.py  discovery.py  history.py  i18n.py  main.py  models.py  network.py  runtime.py  serialization.py  settings.py  transport.py
tests/: test_crypto.py  test_desktop_env.py  test_history.py  test_network.py  test_runtime.py  test_serialization.py  test_settings.py  test_transport.py
(+3 files in other folders)
