[project]
name = "echotext"
version = "0.1.0"
description = "LAN clipboard and text transfer between Android and Windows."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kivy>=2.3.1",
]

[project.scripts]
echotext = "echotext.main:main"

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echotext"]

[dependency-groups]
dev = [
    "pyinstaller>=6.16",
    "pytest>=8.4",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
